Fixed login button alignment.

--- a/client/styles/components/_login.scss
+++ b/client/styles/components/_login.scss
@@ -3,14 +3,7 @@
 }
 
 #topLogin {
-  //padding-left: 14px;
-  //padding-right: 14px;
-
-  > a {
-    padding: 0;
-
-    > div {
-      height: 100% !important;
-    }
+  a {
+    line-height: normal;
   }
 }
